--- a/toyou/app/src/main/res/drawable/confirm_button_click.xml
+++ b/toyou/app/src/main/res/drawable/confirm_button_click.xml
@@ -2,17 +2,17 @@
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
     <item android:state_pressed="false">
         <shape>
-            <solid android:color="@android:color/holo_green_light"></solid>
+            <solid android:color="@color/purple"></solid>
         </shape>
     </item>
     <item android:state_focused="true">
         <shape>
-            <solid android:color="@color/colorPrimary"></solid>
+            <solid android:color="@color/darkgreen"></solid>
         </shape>
     </item>
     <item android:state_pressed="true">
         <shape>
-            <solid android:color="@color/colorPrimary"></solid>
+            <solid android:color="@color/darkgreen"></solid>
         </shape>
     </item>
 </selector>
