--- a/toyou/app/src/main/res/drawable-v24/before_selected.xml
+++ b/toyou/app/src/main/res/drawable-v24/before_selected.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
-    <stroke android:width="3dp" android:color="@color/colorPrimary"></stroke>
+    <stroke android:width="3dp" android:color="@color/darkgreen"></stroke>
     <solid android:color="#FFFFFF"></solid>
     <corners android:bottomLeftRadius="20dp"
         android:bottomRightRadius="20dp"
