--- a/toyou/app/src/main/res/drawable-v24/bg.xml
+++ b/toyou/app/src/main/res/drawable-v24/bg.xml
@@ -3,7 +3,7 @@
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
     <item android:state_pressed="false">
         <shape>
-            <stroke android:width="3dp" android:color="@android:color/holo_green_light"></stroke>
+            <stroke android:width="3dp" android:color="@color/purple"></stroke>
             <corners android:bottomLeftRadius="20dp"
                     android:bottomRightRadius="20dp"
                     android:topLeftRadius="20dp"
