--- a/toyou/app/src/main/res/layout/item_calendar_header.xml
+++ b/toyou/app/src/main/res/layout/item_calendar_header.xml
@@ -24,7 +24,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:padding="16dp"
-            android:textColor="@android:color/holo_green_light"
+            android:textColor="@color/darkgreen"
             android:textSize="15sp"
             />
     </LinearLayout>
