--- a/toyou/app/src/main/res/layout/main_sliding_inner.xml
+++ b/toyou/app/src/main/res/layout/main_sliding_inner.xml
@@ -1,161 +1,193 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="400dp">
-
-
-    <Button
-        android:id="@+id/calendar"
-        android:layout_width="59dp"
-        android:layout_height="36dp"
-        android:layout_marginStart="10dp"
-        android:layout_marginTop="10dp"
-        android:background="@drawable/button_click_bottom"
-        android:text="일정"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
-    <Button
-        android:id="@+id/memoButton"
-        android:layout_width="59dp"
-        android:layout_height="36dp"
-        android:layout_marginStart="10dp"
-        android:layout_marginTop="10dp"
-        android:background="@drawable/button_click_bottom"
-        android:text="메모"
-        app:layout_constraintStart_toEndOf="@+id/calendar"
-        app:layout_constraintTop_toTopOf="parent" />
-
-    <ImageView
-        android:id="@+id/calendarImage"
-        android:layout_width="30dp"
-        android:layout_height="30dp"
-        android:layout_marginTop="7dp"
-        android:layout_marginEnd="16dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/endButton"
-        app:srcCompat="@drawable/calendar" />
-
-    <Button
-        android:id="@+id/confirmButton"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="10dp"
-        android:background="@drawable/confirm_button_click"
-        android:text="확인"
-        android:textColor="#1033F8"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/contentText" />
-
-    <Button
-        android:id="@+id/endButton"
-        android:layout_width="59dp"
-        android:layout_height="36dp"
-        android:layout_marginTop="10dp"
-        android:layout_marginEnd="10dp"
-        android:background="@drawable/button_click_bottom"
-        android:text="목적지 설정"
-        android:textColor="#FFF0F8FF"
-        android:textSize="10dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
-    <Button
-        android:id="@+id/startButton"
-
-        android:layout_width="59dp"
-        android:layout_height="36dp"
-        android:layout_marginTop="10dp"
-        android:layout_marginEnd="10dp"
-        android:background="@drawable/button_click_bottom"
-        android:text="출발지 설정"
-        android:textColor="#FFF0F8FF"
-        android:textSize="10dp"
-        app:layout_constraintEnd_toStartOf="@+id/endButton"
-        app:layout_constraintTop_toTopOf="parent" />
-
-    <TextView
-        android:id="@+id/textView3"
-        android:layout_width="wrap_content"
-        android:layout_height="35dp"
-        android:layout_marginStart="17dp"
-        android:layout_marginTop="90dp"
-        android:gravity="center"
-        android:text="제목 :"
-        android:textSize="16dp"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
-    <EditText
-        android:id="@+id/titleText"
+    <androidx.viewpager2.widget.ViewPager2
+        xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
+        android:id="@+id/mainPager"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_marginStart="80dp"
-        android:layout_marginTop="90dp"
-        android:layout_marginEnd="10dp"
-        android:layout_marginBottom="270dp"
-        android:hint="제목을입력하세요"
-        android:inputType="text"
-        android:textSize="16dp"
+        android:orientation="horizontal"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/textView3"
-        app:layout_constraintTop_toTopOf="parent" />
-
-    <ImageView
-        android:id="@+id/timerImage"
-        android:layout_width="36dp"
-        android:layout_height="35dp"
-        android:layout_marginStart="17dp"
-        android:layout_marginTop="20dp"
-        android:background="@drawable/timer_click"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/titleText"
-        app:srcCompat="@drawable/clock" />
+        app:layout_constraintTop_toTopOf="parent">
 
-    <EditText
-        android:id="@+id/contentText"
-        android:layout_width="384dp"
-        android:layout_height="144dp"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="10dp"
-        android:layout_marginEnd="14dp"
-        android:layout_marginBottom="70dp"
-        android:gravity="top"
-        android:hint="자세한 내용을 입력해주세요(생략가능)"
-        app:layout_constraintBottom_toTopOf="@+id/confirmButton"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/timeText" />
+    </androidx.viewpager2.widget.ViewPager2>
+<!--<androidx.constraintlayout.widget.ConstraintLayout-->
+<!--    xmlns:android="http://schemas.android.com/apk/res/android"-->
+<!--    xmlns:app="http://schemas.android.com/apk/res-auto"-->
+<!--    android:layout_width="match_parent"-->
+<!--    android:layout_height="400dp">-->
 
-    <TextView
-        android:id="@+id/timeText"
-        android:layout_width="match_parent"
-        android:layout_height="35dp"
-        android:layout_marginStart="85dp"
-        android:layout_marginTop="20dp"
-        android:layout_marginEnd="10dp"
-        android:gravity="center_vertical"
-        android:text="시간 설정 해주세요"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/timerImage"
-        app:layout_constraintTop_toBottomOf="@+id/titleText" />
 
-    <Button
-        android:id="@+id/deleteButton"
-        android:layout_width="59dp"
-        android:layout_height="36dp"
-        android:layout_marginTop="10dp"
-        android:layout_marginEnd="10dp"
-        android:background="@drawable/button_click_bottom"
-        android:text="삭제"
-        app:layout_constraintEnd_toStartOf="@+id/startButton"
-        app:layout_constraintTop_toTopOf="parent" />
+<!--    <Button-->
+<!--        android:id="@+id/calendar"-->
+<!--        android:layout_width="59dp"-->
+<!--        android:layout_height="36dp"-->
+<!--        android:layout_marginStart="10dp"-->
+<!--        android:layout_marginTop="10dp"-->
+<!--        android:background="@drawable/button_click_bottom"-->
+<!--        android:text="일정"-->
+<!--        app:layout_constraintStart_toStartOf="parent"-->
+<!--        app:layout_constraintTop_toTopOf="parent" />-->
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+<!--    <Button-->
+<!--        android:id="@+id/memoButton"-->
+<!--        android:layout_width="59dp"-->
+<!--        android:layout_height="36dp"-->
+<!--        android:layout_marginStart="10dp"-->
+<!--        android:layout_marginTop="10dp"-->
+<!--        android:background="@drawable/button_click_bottom"-->
+<!--        android:text="메모"-->
+<!--        app:layout_constraintStart_toEndOf="@+id/calendar"-->
+<!--        app:layout_constraintTop_toTopOf="parent" />-->
+
+<!--    <ImageView-->
+<!--        android:id="@+id/calendarImage"-->
+<!--        android:layout_width="30dp"-->
+<!--        android:layout_height="30dp"-->
+<!--        android:layout_marginTop="7dp"-->
+<!--        android:layout_marginEnd="16dp"-->
+<!--        app:layout_constraintEnd_toEndOf="parent"-->
+<!--        app:layout_constraintTop_toBottomOf="@+id/endButton"-->
+<!--        app:srcCompat="@drawable/calendar" />-->
+
+<!--    <Button-->
+<!--        android:id="@+id/confirmButton"-->
+<!--        android:layout_width="match_parent"-->
+<!--        android:layout_height="wrap_content"-->
+<!--        android:layout_marginTop="10dp"-->
+<!--        android:background="@drawable/confirm_button_click"-->
+<!--        android:text="확인"-->
+<!--        android:textColor="#1033F8"-->
+<!--        app:layout_constraintEnd_toEndOf="parent"-->
+<!--        app:layout_constraintStart_toStartOf="parent"-->
+<!--        app:layout_constraintTop_toBottomOf="@+id/contentText" />-->
+
+<!--    <Button-->
+<!--        android:id="@+id/endButton"-->
+<!--        android:layout_width="59dp"-->
+<!--        android:layout_height="36dp"-->
+<!--        android:layout_marginTop="10dp"-->
+<!--        android:layout_marginEnd="10dp"-->
+<!--        android:background="@drawable/button_click_bottom"-->
+<!--        android:text="목적지 설정"-->
+<!--        android:textColor="#FFF0F8FF"-->
+<!--        android:textSize="10dp"-->
+<!--        app:layout_constraintEnd_toEndOf="parent"-->
+<!--        app:layout_constraintTop_toTopOf="parent" />-->
+
+<!--    <Button-->
+<!--        android:id="@+id/startButton"-->
+
+<!--        android:layout_width="59dp"-->
+<!--        android:layout_height="36dp"-->
+<!--        android:layout_marginTop="10dp"-->
+<!--        android:layout_marginEnd="10dp"-->
+<!--        android:background="@drawable/button_click_bottom"-->
+<!--        android:text="출발지 설정"-->
+<!--        android:textColor="#FFF0F8FF"-->
+<!--        android:textSize="10dp"-->
+<!--        app:layout_constraintEnd_toStartOf="@+id/endButton"-->
+<!--        app:layout_constraintTop_toTopOf="parent" />-->
+
+<!--    <TextView-->
+<!--        android:id="@+id/textView3"-->
+<!--        android:layout_width="wrap_content"-->
+<!--        android:layout_height="35dp"-->
+<!--        android:layout_marginStart="17dp"-->
+<!--        android:layout_marginTop="90dp"-->
+<!--        android:gravity="center"-->
+<!--        android:text="제목 :"-->
+<!--        android:textSize="16dp"-->
+<!--        app:layout_constraintStart_toStartOf="parent"-->
+<!--        app:layout_constraintTop_toTopOf="parent" />-->
+
+<!--    <EditText-->
+<!--        android:id="@+id/titleText"-->
+<!--        android:layout_width="match_parent"-->
+<!--        android:layout_height="match_parent"-->
+<!--        android:layout_marginStart="80dp"-->
+<!--        android:layout_marginTop="90dp"-->
+<!--        android:layout_marginEnd="10dp"-->
+<!--        android:layout_marginBottom="270dp"-->
+<!--        android:hint="제목을입력하세요"-->
+<!--        android:inputType="text"-->
+<!--        android:textSize="16dp"-->
+<!--        app:layout_constraintBottom_toBottomOf="parent"-->
+<!--        app:layout_constraintEnd_toEndOf="parent"-->
+<!--        app:layout_constraintStart_toEndOf="@+id/textView3"-->
+<!--        app:layout_constraintTop_toTopOf="parent" />-->
+
+<!--    <ImageView-->
+<!--        android:id="@+id/timerImage"-->
+<!--        android:layout_width="36dp"-->
+<!--        android:layout_height="35dp"-->
+<!--        android:layout_marginStart="20dp"-->
+<!--        android:layout_marginTop="7dp"-->
+<!--        android:background="@drawable/timer_click"-->
+<!--        app:layout_constraintStart_toStartOf="parent"-->
+<!--        app:layout_constraintTop_toBottomOf="@+id/galleryImage"-->
+<!--        app:srcCompat="@drawable/clock" />-->
+
+<!--    <EditText-->
+<!--        android:id="@+id/contentText"-->
+<!--        android:layout_width="384dp"-->
+<!--        android:layout_height="144dp"-->
+<!--        android:layout_marginStart="16dp"-->
+<!--        android:layout_marginTop="7dp"-->
+<!--        android:layout_marginEnd="14dp"-->
+<!--        android:layout_marginBottom="70dp"-->
+<!--        android:gravity="top"-->
+<!--        android:hint="자세한 내용을 입력해주세요(생략가능)"-->
+<!--        app:layout_constraintBottom_toTopOf="@+id/confirmButton"-->
+<!--        app:layout_constraintEnd_toEndOf="parent"-->
+<!--        app:layout_constraintHorizontal_bias="0.0"-->
+<!--        app:layout_constraintStart_toStartOf="parent"-->
+<!--        app:layout_constraintTop_toBottomOf="@+id/timeText" />-->
+
+<!--    <TextView-->
+<!--        android:id="@+id/timeText"-->
+<!--        android:layout_width="match_parent"-->
+<!--        android:layout_height="35dp"-->
+<!--        android:layout_marginStart="85dp"-->
+<!--        android:layout_marginTop="7dp"-->
+<!--        android:layout_marginEnd="10dp"-->
+<!--        android:gravity="center_vertical"-->
+<!--        android:text="시간 설정 해주세요"-->
+<!--        app:layout_constraintEnd_toEndOf="parent"-->
+<!--        app:layout_constraintStart_toEndOf="@+id/timerImage"-->
+<!--        app:layout_constraintTop_toBottomOf="@+id/galleryText" />-->
+
+<!--    <Button-->
+<!--        android:id="@+id/deleteButton"-->
+<!--        android:layout_width="59dp"-->
+<!--        android:layout_height="36dp"-->
+<!--        android:layout_marginTop="10dp"-->
+<!--        android:layout_marginEnd="10dp"-->
+<!--        android:background="@drawable/button_click_bottom"-->
+<!--        android:text="삭제"-->
+<!--        app:layout_constraintEnd_toStartOf="@+id/startButton"-->
+<!--        app:layout_constraintTop_toTopOf="parent" />-->
+
+<!--    <ImageView-->
+<!--        android:id="@+id/galleryImage"-->
+<!--        android:layout_width="36dp"-->
+<!--        android:layout_height="35dp"-->
+<!--        android:layout_marginStart="20dp"-->
+<!--        android:layout_marginTop="5dp"-->
+<!--        app:layout_constraintStart_toStartOf="parent"-->
+<!--        app:layout_constraintTop_toBottomOf="@+id/textView3"-->
+<!--        app:srcCompat="@android:drawable/ic_menu_gallery" />-->
+
+<!--    <TextView-->
+<!--        android:id="@+id/galleryText"-->
+<!--        android:layout_width="match_parent"-->
+<!--        android:layout_height="35dp"-->
+<!--        android:layout_marginStart="85dp"-->
+<!--        android:gravity="center_vertical"-->
+<!--        android:text="사진을 설정해주세요(선택)"-->
+<!--        app:layout_constraintEnd_toEndOf="parent"-->
+<!--        app:layout_constraintStart_toEndOf="@+id/galleryImage"-->
+<!--        app:layout_constraintTop_toBottomOf="@+id/titleText" />-->
+
+<!--</androidx.constraintlayout.widget.ConstraintLayout>-->
