--- a/toyou/app/src/main/res/values/colors.xml
+++ b/toyou/app/src/main/res/values/colors.xml
@@ -7,4 +7,6 @@
     <color name="lineColor">#f2f1f1</color>
     <color name="white">#FFFFFF</color>
     <color name="pink">#FF5555</color>
+    <color name="purple">#A566FF</color>
+    <color name="darkgreen">#41AF39</color>
 </resources>
